<resources>
    // Main
    <string name="app_name">Monty Python Trivia</string>
    <string name="app_title_results">Monty Python Trivia - Results</string>
    <string name="logo">Monty Python Trivia Logo</string>
    <string name="stop">STOP! Welcome to the Bridge of Death!</string>
    <string name="oldman">The old man from scene twenty-four</string>
    <string name="intro">"I'm the old man from scene twenty-four and who approacheth the Bridge of Death must answer me these questions three (ten, actually), and the other side he see."</string>
    // Questions
    <string name="q1">"Pretend you're called Loretta. Where would you keep your baby?"</string>
    <string name="a11">"In a womb"</string>
    <string name="a12">"In a box"</string>
    <string name="a13">"Into the Foetus Frightening Room"</string>
    <string name="a14">"In the machine that goes 'ping'"</string>
    <string name="q2">"What is the capital of Assyria?"</string>
    <string name="a21">"I don't know that!"</string>
    <string name="a22">"African or European?"</string>
    <string name="a23">"Blue"</string>
    <string name="a24">"I seek the Grail!"</string>
    <string name="q3">"What would you say to defeat the Knights Who Say Ni?"</string>
    <string name="a31">"Neee-wom"</string>
    <string name="a32">"A shrubbery"</string>
    <string name="a33">"Ecky-ecky-ecky-ecky-pikang-zoop-boing-goodem-zu-owly-zhiv"</string>
    <string name="a34">"It"</string>
    <string name="q4">"Find the Fish!"</string>
    <string name="a41">"In his trunk"</string>
    <string name="a42">"Wherever I go"</string>
    <string name="a43">"Inside the drawers in the bureau"</string>
    <string name="a44">"Hidden in his trousers"</string>
    <string name="q5">"Which one is NOT one of the Spanish Inquisition's chief weapons:"</string>
    <string name="a51">"fear and surprise"</string>
    <string name="a52">"ruthless efficiency"</string>
    <string name="a53">"nice purple uniforms"</string>
    <string name="a54">"an almost fanatical devotion to the Pope"</string>
    <string name="q6">"What is the name of this python:"</string>
    <string name="a61">"Type it her...Including the majestik møøse. A møøse once bit my sister and"</string>
    <string name="q7">"What CANNOT be found in the Dirty Hungarian Phrasebook?"</string>
    <string name="a71">"My hovercraft is full of eels"</string>
    <string name="a72">"You have beautiful thighs"</string>
    <string name="a73">"My nipples explode with delight"</string>
    <string name="a74">"Was ist das Won für Mittelschmerz?"</string>
    <string name="q8">"Finish the phrase: 'And now for something completely different...'"</string>
    <string name="a81">"Lucky aliens"</string>
    <string name="a82">"A man with a tape recorder up his nose"</string>
    <string name="a83">"Live organ transplants"</string>
    <string name="a84">"Every sperm is sacred"</string>
    <string name="q9">"According to Armaments, chapter two, verses nine to twenty-one, which shalt be the number thou shalt count?"</string>
    <string name="a91">"3"</string>
    <string name="a92">"5"</string>
    <string name="a93">"24"</string>
    <string name="a94">"42"</string>
    <string name="q10">"Mark all the options NOT offered by the Green Midget Cafe:"</string>
    <string name="a101">"Salmon Mousse and Spam"</string>
    <string name="a102">"Spam, egg, Spam, Spam, bacon and Spam"</string>
    <string name="a103">"Venezuelan Beaver Cheese, Spam, Spam, egg and Spam"</string>
    <string name="a104">"Egg and Spam"</string>
    <string name="a105">"Egg, bacon, sausage and Spam"</string>
    <string name="a106">"Spam, Spam, Spam, Spam, Spam, Spam, wafer-thin mint, Spam, Spam, Spam and Spam"</string>
    <string name="a107">"Lobster Thermidor au Crevettes with a mornay sauce served in a Provencale manner with shallots and aubergines garnished with truffle pate, brandy and with a fried egg on top and Spam"</string>
    <string name="a108">"Spam, Spam, Spam, Spam, Spam, Spam, baked beans, Spam, Spam, Spam and Spam"</string>
    <string name="a109">"Spam, Spam, Spam, egg and Spam"</string>
    // Results
    <string name="yay_title">"Congratulations!"</string>
    <string name="yay_text">"You did so well that you probably know The Meaning of Life! You're so clever that you could make into the Upper Class Twit of the Year or even play in the International Philosophy Football World Cup. And, finally, here are some completely gratuitous pictures of penises to annoy the censors and to hopefully spark some sort of controversy... (Just kidding, this is a SFW Trivia)"</string>
    <string name="ehh_title">Average! No more, no less</string>
    <string name="ehh_text">"You probably live the Dull Life of a City Stockbroker and you are OK with that. When trouble strikes and you need to save the day, you are ready to become... the BICYCLE REPAIR MAN!"</string>
    <string name="bad_title">"FAIL!"</string>
    <string name="bad_text">"I'm sure you didn't expect all that Spanish Inquisition, right? You will be thrown into the Gorge of Eternal Peril! But, first... let's see if you can handle THE COMFY CHAIR!"</string>
    <string name="total">/420</string>
    // Buttons
    <string name="start">"Ask me the questions, bridgekeeper. \n I am not afraid."</string>
    <string name="tip">"Click for a tip"</string>
    <string name="submit">"Right. Off you go."</string>
    <string name="reset">"Try again (This is a silly trivia anyway)"</string>

</resources>
